@@ -1,0 +1,53 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr">
+	<head>
+		<title>CSS Test</title>
+
+		<style type="text/css">
+
+			div {
+				border: solid 1px red;
+			}
+			
+			#topRight {
+				float:right;
+				width: 250px;
+				height:100px;
+			}
+			
+			#top {	
+				width:50%;
+			}
+			
+			#bottomLeft {
+				float: left;
+				clear: both;
+			}
+		</style>	
+
+	</head>
+
+	<body>
+
+		<div id="topRight">
+			TOP-RIGHT<br />
+			float:right;<br />
+			width: 250px;<br />
+			height:100px;
+		</div>
+
+		<div id="top">
+			TOP<br />
+			width:50%;
+		</div>
+
+
+		<div id="bottomLeft">
+			BOTTOM-LEFT<br />
+			float: left;<br />
+			clear: both;
+		</div>
+		
+	</body>
+</html>
